# VisageDvachevsky-temprepo

./: .gitkeep  ADVERSARIAL_REVIEW.md  CRITICAL_REVIEW.md  DEEP_ANALYSIS_REPORT.md  FINAL_VERDICT.md  IMPLEMENTATION_PLAN.md  OPTIMIZATION_WORKPLAN.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_REVIEW.md  POST_CHANGE_ANALYSIS.md  UPDATED_IMPLEMENTATION_PLAN.md  analysis_seed.json  benchmarks.txt  hello_world_server.cpp  http.cpp  http.hpp  http_field.cpp  http_headers.hpp  http_server.cpp  router.hpp  serde.hpp
compute-canonical/callgrind_pass/: callgrind.out.7998.1  callgrind_annotate.txt  run_callgrind.sh  wrk_output.txt
compute-canonical/record_pass/: perf.data  perf_report.txt  top_symbols.json  warmup_wrk.txt  wrk_output.txt
compute-canonical/stat_pass/: perf_stat.csv  warmup_wrk.txt  wrk_output.txt
compute_api/: CMakeLists.txt  README.md  api.yaml  main.cpp
core/include/katana/core/: arena.hpp  cpu_info.hpp  (+41 more)
core/src/: arena.cpp  cpu_info.cpp  epoll_reactor.cpp  handler_context.cpp  http.cpp  http_server.cpp  io_buffer.cpp  io_uring_reactor.cpp  openapi_loader.cpp  problem.cpp  reactor_pool.cpp  shutdown.cpp  syscall_metrics.cpp  system_limits.cpp  tcp_listener.cpp  tcp_socket.cpp
e2e_instruction_bundle/: README.md  compute_callgrind_annotate.txt  hello_callgrind_annotate.txt
e2e_instruction_bundle/compute_perf/: report.txt  wrk.txt
e2e_instruction_bundle/compute_perf_saved/: annotate_handle_connection.txt  perf.data  report.txt  wrk.txt
e2e_instruction_bundle/harness_compute/: callgrind.out
e2e_instruction_bundle/harness_hello/: callgrind.out
e2e_instruction_bundle/hello_perf/: report.txt  wrk.txt
e2e_instruction_bundle/hello_perf_saved/: annotate_handle_connection.txt  perf.data  report.txt  wrk.txt
fresh_vm_20260314T0506Z/wrk/: BENCHMARK_RESULTS.md  benchmark_results.json
hello-canonical/callgrind_pass/: callgrind.out.7775.1  callgrind_annotate.txt  wrk_output.txt
hello-canonical/record_pass/: perf.data  perf_report.txt  top_symbols.json  warmup_wrk.txt  wrk_output.txt
hello-canonical/stat_pass/: perf_stat.csv  warmup_wrk.txt  wrk_output.txt
hello-canonical/strace_pass/: wrk_output.txt
hello-canonical/strace_pass2/: wrk_output.txt
hello-canonical/strace_pass3/: run_strace.sh  wrk_output.txt
katana_gen/: ast_dump.cpp  dto_generator.cpp  generator.hpp  generator_utils.cpp  json_generator.cpp  options.cpp  options.hpp
(+38 files in other folders)
